--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="home-buttons">
                 <button type="button" class="btn btn-outline-dark"><a href="#Projects">View Projects</a></button>
-                <button type="button" class="btn btn-outline-dark"><a href="https://www.fiverr.com/surbhi_mathur99/buying?source=avatar_menu_profile" target="_blank">Hire Me</a></button>
+                <button type="button" class="btn btn-outline-dark"><a href="https://wa.me/919672628156?text=Hello%20I%20saw%20your%20website%20and%20would%20like%20to%20know%20more." target="_blank">Hire Me</a></button>
             </div>
         </div>
     </div>
@@ -132,8 +132,6 @@
                 <ul class="contact-details">
                     <li><strong>&#128231 Email: </strong><a href="mailto:subhi3343@gmail.com">subhi3343@gmail.com</a>
                     </li>
-                    <li><strong>&#128279 LinkedIn: </strong><a href="https://www.linkedin.com/in/surbhi-mathur-729a54240/"
-                            target="_blank">linkedin.com/in/surbhimathur</a></li>
                     <li><strong>&#128188 GitHub: </strong><a href="https://github.com/surbhi3343"
                             target="_blank">github.com/surbhimathur</a></li>
                     <li><strong>&#128205 Location: </strong>India</li>
