--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p>Outside of coding, I find joy in designing visuals, experimenting in Canva, and, of course, sipping
                     chai!</p>
                 <p><strong>&#128140 Let's built something cool together. </strong>
-                    <button type="button"class="btn btn-light"><a href="https://www.fiverr.com/surbhi_mathur99/buying?source=avatar_menu_profile">Hire me!</a></button></p>
+                    <button type="button"class="btn btn-light"><a href="https://wa.me/919672628156?text=Hello%20I%20saw%20your%20website%20and%20would%20like%20to%20know%20more.">Hire me!</a></button></p>
             </div>
         </div>
     </section>
